<resources>
    <string name="app_name">MitYoAl</string>
    <string name="tv_splash">CONOCE \n AYUDA</string>
    <string name="splash_mityoal">MITYOAL</string>
    <string name="inicio_sesion">Ya tienes una cuenta? Inicia sesion aqui!</string>
    <string name="registrar">Registrarse</string>
    <string name="hint_email">Correo</string>
    <string name="hint_password">Password</string>
    <string name="username">Usuario</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="rbLogin">Recordar contraseña</string>
    <string name="registro">No tienes una cuenta? Createla aqui!</string>
    <string name="bottom_app_bar_label_title">Bottom app bar</string>
    <string name="button_label_title">Button</string>
    <string name="app_bar_menu_share">Share</string>
    <string name="app_bar_menu_bookmark">Bookmark</string>
    <string name="app_bar_menu_chat">Chat</string>
    <string name="toast_et_vacios">No se han introducido todos los valores</string>
    <string name="toast_msg_no_usuario">El usuario introducido no está registrado</string>
    <string name="app_bar_menu_config">Ajustes</string>
    <string name="tv_informacionP">Cambie su foto de perfil</string>
    <string name="guardarPerfil">Guardar datos</string>
    <string name="et_usuarioP">Introduce tu correo de usuario</string>
    <string name="opcion1">Sexador</string>
    <string name="opcion2">Piloto</string>
    <string name="opcion3">Abanicador</string>
    <string name="opcion4">Perro Policia</string>
    <string name="opcion5">Malabarista</string>
    <string name="etDesc">Describete</string>
    <string name="etProf">¿Que profesion buscas?</string>
    <string name="etUsuarioP">Introduce nombre de usuario</string>
    <string name="etProfesion">Profesiones</string>
    <string name="volver">Volver</string>
    <string name="etProfesionB">Introduce tu profesión</string>
    <string name="contactos">Contactos</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="ajustes">Ajustes</string>
    <string name="defecto">Texto Aquí</string>
    <string name="not_supported">Activity does not implement SwipeFlingAdapterView.onFlingListener</string>
    <string name="toast_tuto">Desliza a la izquierda para rechazar, y a la derecha para aceptar</string>
    <string name="der">¡Aceptado!</string>
    <string name="izq">¡Rechazado!</string>
    <string name="toast_et_muy_grandes">Los datos introducidos son muy grandes</string>
    <string name="toast_reiniciar">Sal y vuelve a iniciar sesión para que se te actualice el perfil</string>
    <string name="hint_escribe_texto">Pulsa para escribir</string>
    <string name="btn_chat">ENVIAR</string>
    <string name="app_bar_menu_logout">Cerrar sesión</string>
    <string name="no_soporte">No soportado por tu dispositivo</string>
    <string name="excepcion_fling">La excepción se encuentra en:</string>
    <string name="error_array_linear">Los array no son de la misma longitud</string>
    <string name="toast_error_inicio_sesion">No se ha podido iniciar sesión</string>
    <string name="msg_objeto_borrado">Objeto de la lista borrado</string>
</resources>