<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
      android:id="@+id/bottom_app_bar_menu_share"
      android:title="@string/app_bar_menu_share"
      android:icon="@drawable/ic_share_on_surface_24dp"
      app:showAsAction="ifRoom"/>
    <item
      android:id="@+id/bottom_app_bar_menu_bookmark"
      android:title="@string/app_bar_menu_bookmark"
      android:icon="@drawable/ic_bookmark_on_surface_24dp"
      app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/bottom_app_bar_menu_search"
        android:icon="@drawable/ic_configuraciones"
        android:title="@string/app_bar_menu_config"
        app:showAsAction="ifRoom"
        android:onClick="ajustes"/>

</menu>
